# train-passenger-distribution

./: .gitignore  Cargo.toml  README.md
data/: 001178992.csv  out.csv
src/: data.rs  kde.rs  main.rs  plot.rs  types.rs  utils.rs
src/data/: generate_data.rs  mod.rs  parse_od.rs  read_data.rs  utils.rs
src/detect-stairs/: README.md  main.py
src/plot/: colors.rs  common.rs  main.rs  mod.rs  steps.rs  utils.rs
