[package]
name = "train-passenger-distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.2"
statrs = "0.15.0"
svg = "0.10.0"
csv = "1.1.6"
serde = { version = "1.0.141", features = ["derive"] }
